samples/_failures_safe/1761295122_ac9576_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff3c58b3.c: In function ‘main’:
./samples/SAFE/__tmp_ff3c58b3.c:157:10: error: ‘compress’ undeclared (first use in this function); did you mean ‘compressed’?
  157 |     if (!compress
      |          ^~~~~~~~
      |          compressed
./samples/SAFE/__tmp_ff3c58b3.c:157:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ff3c58b3.c:157:18: error: expected ‘)’ at end of input
  157 |     if (!compress
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_ff3c58b3.c:157:5: error: expected declaration or statement at end of input
  157 |     if (!compress
      |     ^~
